fix:redis config and message service