@@ -21,7 +21,7 @@
 
 	<!-- PROPERTIES -->
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<lombok.version>1.18.32</lombok.version>
 	</properties>
@@ -156,8 +156,8 @@
 				<version>3.11.0</version>
 
 				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
+					<source>21</source>
+					<target>21</target>
 
 					<annotationProcessorPaths>
 
@@ -176,6 +176,7 @@
 						</path>
 
 					</annotationProcessorPaths>
+					<compilerArgs>--enable-preview</compilerArgs>
 
 				</configuration>
 			</plugin>
